# imaginarium_backend

./: .env.tests  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  example.py  imaginarium.session.sql  pyproject.toml
game/: admin.py  consumers.py  exceptions.py  middlewares.py  models.py  routing.py  serializers.py  urls.py  views.py
game/handlers/: __init__.py  base.py  choose_pawn.py  come_up_with_an_association.py  leave_room.py  update_user.py
game/logic/: handlers.py
game/migrations/: 0001_initial.py  0002_alter_player_user.py  0002_card_roomcard_pawnvote_and_more.py  0003_alter_player_user.py  0003_roomcard_card.py  0004_remove_pawnvote_card_remove_room_number_of_pawns_and_more.py
game/models/: __init__.py  card.py  color.py  pawn.py  pawn_vote.py  player.py  room.py  room_card.py
game/models_pydantic/: __init__.py  card.py  color.py  pawn.py  player.py  room.py  room_card.py
game/serializers/: __init__.py  card.py  color.py  pawn.py  player.py  room.py  room_card.py
src/: asgi.py  settings.py  urls.py
user/: serializers.py  urls.py  views.py
user/models_pydantic/: user.py
